# opencode-bill

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: package.yml
scripts/ci/: package.sh
src/: lib.rs  main.rs
